--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.948.0",
     "@aws-sdk/s3-request-presigner": "^3.948.0",
+    "@clerk/clerk-react": "^5.58.1",
     "idb": "^8.0.3",
     "multer": "^2.0.2",
     "nodemailer": "^7.0.11",
