--- a/src/.env
+++ b/src/.env
@@ -1,3 +1,9 @@
 MONGO_URI=mongodb+srv://adi:chatApp123@chatapp.vay15em.mongodb.net/?appName=chatApp
 JWT_SECRET=yellow_color
 PORT=3000
+CLERK_SECRET_KEY=sk_test_Gt5mW6nrYXrGkkCBumpXdYxn6V1RClrkUe1qgDvPxm        
+VITE_CLERK_PUBLISHABLE_KEY=pk_test_ZmFtb3VzLWxhcmstODMuY2xlcmsuYWNjb3VudHMuZGV2JA
+CLOUDINARY_CLOUD_NAME=dkj9ywli1
+CLOUDINARY_API_KEY=199746247668244
+CLOUDINARY_API_SECRET=x8XqxNoQNvxJfv1VIIu6tdodvbQ
+CLOUDINARY_URL=cloudinary://385623872545124:lPKTuH3jFs0la1WUUyVxhaFxkqA@dkj9ywli1
